--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -1,8 +1,9 @@
 name: CI - Run Scrapper
 
 on:
+  workflow_dispatch:    # manual run
   schedule:
-  - cron: "0 0 * * *"
+    - cron: "0 3 * * 1" # every Monday at 03:00 UTC
 
 jobs:
   build:
