--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
     steps:
       - name: Check out repository code
@@ -26,3 +30,11 @@ jobs:
 
       - name: Run the project
         run: dotnet run --project ./backend/Peizazhet.Scraper/Peizazhet.Scraper/Peizazhet.Scraper.csproj --configuration Release --no-build
+
+      - name: Save new article
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "Get new article via GitHub Actions" || echo "No changes to commit"
+          git push
