--- a/.github/workflows/run-scraper.yml
+++ b/.github/workflows/run-scraper.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.x'
+          dotnet-version: "8.x"
 
       - name: Restore dependencies
         run: dotnet restore ./backend/Peizazhet.Scraper/Peizazhet.Scraper.slnx
@@ -39,3 +39,4 @@ jobs:
           else
             git commit -m "Update repo via GitHub Actions"
             git push
+          fi
